# ml-notebooks

./: .gitignore  README.md  main.py  pyproject.toml  run_moel.ipynb  tokenizer.ipynb  train-runpod.py  train_tinyllm.ipynb
agent-design/: README.md  agent.py  client.py  codeact_agent.py  cot-factorization.py  cot.html  cot.py  graph.py  react_agent.py  react_agent_browser_use.py  react_graph.py  short-memory.py  tool_call.py  utils.py
agent-design/archive/: react_agent.py  react_agent_browser_use.py
agent-design/trace/: code_agent_prime_factorization.txt  react_browser_use_wiki_stanley_cup.txt  react_prime_factorization.txt
cluster-of-star-train-llm/: README.md  final_eval_complete_re.csv  inference.py  tokenizer.ipynb  train-from-model.py  train-runpod.py  training-log.md  training_tiny_stories.ipynb  upload.py
eval-results/SmolLM2-135M/: results_2025-07-20T00-03-04.809442.json  results_2025-07-20T00-33-51.855482.json
local-research-group/eval-results/SmolLM2-135M/: humaneval.json  results_2025-07-20T00-12-28.520148.json  results_2025-07-20T00-19-29.498459.json  results_2025-07-20T00-29-59.508265.json  results_2025-07-20T00-37-08.750926.json
openai/: simple-agents.py  utils.py
openai-agent/: README.md  multi-agents.py  simple-agents.py
