[project]
name = "ml-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "huggingface-hub>=0.31.2",
    "openai>=1.77.0",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "typing>=3.10.0.0",
]
